# wikipedia-scraper

./: Dockerfile  Pipfile  README.md  data.db  main.py  part1.py  pyproject.toml
k8s/: web.yaml
